16 January 2015: Wouter
	- unit test for local unix connection.  Documentation and log_addr
	  does not inspect port for AF_LOCAL.
	- unbound-checkconf -f prints chroot with pidfile path.

13 January 2015: Wouter
	- iana portlist update.

12 January 2015: Wouter
	- Cast sun_len sizeof to socklen_t.
	- Fix pyunbound ord call, portable for python 2 and 3.

7 January 2015: Wouter
	- Fix warnings in pythonmod changes.

6 January 2015: Wouter
	- iana portlist update.
	- patch for remote control over local sockets, from Dag-Erling
	  Smorgrav, Ilya Bakulin.  Use control-interface: /path/sock and
	  control-use-cert: no.
	- Fixup that patch and uid lookup (only for daemon).
	- coded the default of control-use-cert, to yes.

5 January 2015: Wouter
	- getauxval test for ppc64 linux compatibility.
	- make strip works for unbound-host and unbound-anchor.
	- patch from Stephane Lapie that adds to the python API, that
	  exposes struct delegpt, and adds the find_delegation function.
	- print query name when max target count is exceeded.
	- patch from Stuart Henderson that fixes DESTDIR in
	  unbound-control-setup for installs where config is not in
	  the prefix location.
	- Fix #634: fix fail to start on Linux LTS 3.14.X, ignores missing
	  IP_MTU_DISCOVER OMIT option (fix from Remi Gacogne).
	- Updated contrib warmup.cmd/sh to support two modes - load
	  from pre-defined list of domains or (with filename as argument)
	  load from user-specified list of domains, and updated contrib
	  unbound_cache.sh/cmd to support loading/save/reload cache to/from
	  default path or (with secondary argument) arbitrary path/filename,
	  from Yuri Voinov.
	- Patch from Philip Paeps to contrib/unbound_munin_ that uses
	  type ABSOLUTE.  Allows munin.conf: [idleserver.example.net]
	  unbound_munin_hits.graph_period minute

9 December 2014: Wouter
	- svn trunk has 1.5.2 in development.
	- config.guess and config.sub update from libtoolize.